@@ -333,36 +333,34 @@ constants.gui_strings = {
   burned_in = { "gui.rb-burned-in" },
   burnt_result = { "gui.rb-burnt-result" },
   burnt_result_of = { "gui.rb-burnt-result-of" },
+  can_burn = { "gui.rb-can-burn" },
+  can_craft = { "gui.rb-can-craft" },
   captions = { "gui.rb-captions" },
   category = { "gui.rb-category" },
   charging_energy = { "gui.rb-charging-energy" },
   click = { "gui.rb-click" },
   close_search_gui_after_selection = { "gui.rb-close-search-gui-after-selection" },
   close_search_when_moving_info_pages = { "gui.rb-close-search-when-moving-info-pages" },
-  compatible_equipment = { "gui.rb-compatible-equipment" },
-  compatible_fuels = { "gui.rb-compatible-fuels" },
-  compatible_mining_drills = { "gui.rb-compatible-mining-drills" },
-  compatible_modules = { "gui.rb-compatible-modules" },
-  compatible_recipes = { "gui.rb-compatible-recipes" },
-  compatible_resources = { "gui.rb-compatible-resources" },
+  accepted_equipment = { "gui.rb-accepted-equipment" },
+  can_mine = { "gui.rb-compatible-can_mine" },
   construction_radius = { "gui.rb-construction-radius" },
   consumption_bonus = { "description.consumption-bonus" },
   content = { "gui.rb-content" },
   control_click = { "gui.rb-control-click" },
   crafter = { "gui.rb-crafter" },
   crafting_speed = { "description.crafting-speed" },
-  crafting_time_desc = { "gui.rb-crafting-time-desc" },
   crafting_time = { "gui.rb-crafting-time" },
+  crafting_time_desc = { "gui.rb-crafting-time-desc" },
   default_state = { "gui.rb-default-state" },
   default_temperature = { "gui.rb-default-temperature" },
-  disabled_abbrev = { "gui.rb-disabled-abbrev" },
   disabled = { "entity-status.disabled" },
+  disabled_abbrev = { "gui.rb-disabled-abbrev" },
   energy_consumption = { "gui.rb-energy-consumption" },
   energy_per_shield_point = { "gui.rb-energy-per-shield-point" },
   energy_production = { "gui.rb-energy-production" },
+  equipment = { "gui.rb-equipment" },
   equipment_categories = { "gui.rb-equipment-categories" },
   equipment_category = { "gui.rb-equipment-category" },
-  equipment = { "gui.rb-equipment" },
   equipment_properties = { "gui.rb-equipment-properties" },
   fixed_recipe = { "gui.rb-fixed-recipe" },
   fluid = { "gui.rb-fluid" },
@@ -371,8 +369,8 @@ constants.gui_strings = {
   format_area = { "gui.rb-format-area" },
   format_degrees = { "format-degrees-c-compact" },
   format_percent = { "format-percent" },
-  format_seconds_parenthesis = { "gui.rb-format-seconds-parenthesis" },
   format_seconds = { "time-symbol-seconds" },
+  format_seconds_parenthesis = { "gui.rb-format-seconds-parenthesis" },
   fuel_categories = { "gui.rb-fuel-categories" },
   fuel_category = { "gui.rb-fuel-category" },
   fuel_pollution = { "description.fuel-pollution" },
@@ -385,8 +383,8 @@ constants.gui_strings = {
   go_to_the_back = { "gui.rb-go-to-the-back" },
   go_to_the_front = { "gui.rb-go-to-the-front" },
   group = { "gui.rb-group" },
-  hidden_abbrev = { "gui.rb-hidden-abbrev" },
   hidden = { "gui.rb-hidden" },
+  hidden_abbrev = { "gui.rb-hidden-abbrev" },
   ingredient_in = { "gui.rb-ingredient-in" },
   ingredient_limit = { "gui.rb-ingredient-limit" },
   ingredients = { "gui.rb-ingredients" },
@@ -401,6 +399,7 @@ constants.gui_strings = {
   made_in = { "gui.rb-made-in" },
   max_rows = { "gui.rb-max-rows" },
   middle_click = { "gui.rb-middle-click" },
+  mined_by = { "gui.rb-mined-by" },
   mined_from = { "gui.rb-mined-from" },
   mining_area = { "gui.rb-mining-area" },
   mining_drill = { "gui.rb-mining-drill" },
@@ -411,41 +410,41 @@ constants.gui_strings = {
   modules = { "gui.rb-modules" },
   movement_bonus = { "description.movement-speed-bonus" },
   offshore_pump = { "gui.rb-offshore-pump" },
-  open_info_relative_to_gui = { "gui.rb-open-info-relative-to-gui" },
   open_in_technology_window = { "gui.rb-open-in-technology-window" },
+  open_info_relative_to_gui = { "gui.rb-open-info-relative-to-gui" },
   per_second_suffix = { "gui.rb-per-second-suffix" },
   place_as_equipment_result = { "gui.rb-place-as-equipment-result" },
-  placed_by = { "gui.rb-placed-by" },
   place_result = { "gui.rb-place-result" },
+  placed_by = { "gui.rb-placed-by" },
   pollution_bonus = { "description.pollution-bonus" },
   prerequisite_of = { "gui.rb-prerequisite-of" },
   prerequisites = { "gui.rb-prerequisites" },
   preserve_search_query = { "gui.rb-preserve-search-query" },
-  productivity_bonus = { "description.productivity-bonus" },
   product_of = { "gui.rb-product-of" },
+  productivity_bonus = { "description.productivity-bonus" },
   products = { "gui.rb-products" },
   pumped_by = { "gui.rb-pumped-by" },
   pumping_speed = { "description.pumping-speed" },
+  recipe = { "gui.rb-recipe" },
   recipe_categories = { "gui.rb-recipe-categories" },
   recipe_category = { "gui.rb-recipe-category" },
-  recipe = { "gui.rb-recipe" },
   recipes = { "gui.rb-recipes" },
   required_fluid = { "gui.rb-required-fluid" },
   required_units = { "gui.rb-required-units" },
-  researched_in = { "gui.rb-researched-in" },
   research_ingredients_per_unit = { "gui.rb-research-ingredients-per-unit" },
-  research_speed_desc = { "gui.rb-research-speed-desc" },
   research_speed = { "description.research-speed" },
+  research_speed_desc = { "gui.rb-research-speed-desc" },
+  researched_in = { "gui.rb-researched-in" },
+  resource = { "gui.rb-resource" },
   resource_categories = { "gui.rb-resource-categories" },
   resource_category = { "gui.rb-resource-category" },
-  resource = { "gui.rb-resource" },
   resources = { "gui.rb-resources" },
   robot_limit = { "gui.rb-robot-limit" },
   rocket_launch_product_of = { "gui.rb-rocket-launch-product-of" },
   rocket_launch_products = { "gui.rb-rocket-launch-products" },
   rocket_parts_required = { "gui.rb-rocket-parts-required" },
-  search_gui_location = { "gui.rb-search-gui-location" },
   search = { "gui.rb-search" },
+  search_gui_location = { "gui.rb-search-gui-location" },
   search_type = { "gui.rb-search-type" },
   session_history = { "gui.rb-session-history" },
   shield_points = { "gui.rb-shield-points" },
@@ -467,12 +466,13 @@ constants.gui_strings = {
   speed_bonus = { "description.speed-bonus" },
   stack_size = { "gui.rb-stack-size" },
   take_result = { "gui.rb-take-result" },
-  tech_level_desc = { "gui.rb-tech-level-desc" },
+  accepted_modules = { "gui.rb-accepted-modules" },
   tech_level = { "gui.rb-tech-level" },
+  tech_level_desc = { "gui.rb-tech-level-desc" },
   technology = { "gui.rb-technology" },
   temperatures = { "gui.rb-temperatures" },
-  time_per_unit_desc = { "gui.rb-time-per-unit-desc" },
   time_per_unit = { "gui.rb-time-per-unit" },
+  time_per_unit_desc = { "gui.rb-time-per-unit-desc" },
   toggle_completed = { "gui.rb-toggle-completed" },
   tooltips = { "gui.rb-tooltips" },
   unlocked_by = { "gui.rb-unlocked-by" },
@@ -670,11 +670,11 @@ constants.pages = {
         { type = "plain", source = "size", formatter = "area" },
       },
     },
-    { type = "list_box", source = "compatible_recipes", max_rows = 10 },
+    { type = "list_box", source = "can_craft", max_rows = 10 },
     { type = "list_box", source = "recipe_categories", default_state = "collapsed" },
-    { type = "list_box", source = "compatible_fuels" },
+    { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
-    { type = "list_box", source = "compatible_modules", default_state = "hidden" },
+    { type = "list_box", source = "accepted_modules", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
   },
@@ -692,7 +692,7 @@ constants.pages = {
       },
     },
     { type = "table", source = "equipment_properties" },
-    { type = "list_box", source = "compatible_fuels" },
+    { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
     { type = "list_box", source = "equipment_categories", default_state = "collapsed" },
     { type = "list_box", source = "unlocked_by" },
@@ -768,7 +768,7 @@ constants.pages = {
     { type = "list_box", source = "researched_in" },
     { type = "list_box", source = "burned_in" },
     { type = "list_box", source = "burnt_result_of" },
-    { type = "list_box", source = "compatible_equipment", default_state = "collapsed" },
+    { type = "list_box", source = "accepted_equipment", default_state = "collapsed" },
     { type = "list_box", source = "equipment_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
   },
@@ -789,15 +789,15 @@ constants.pages = {
       },
     },
     { type = "list_box", source = "inputs" },
-    { type = "list_box", source = "compatible_fuels" },
+    { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
   },
   machine = {
-    { type = "list_box", source = "compatible_fuels" },
+    { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
-    { type = "list_box", source = "compatible_equipment", default_state = "collapsed" },
+    { type = "list_box", source = "accepted_equipment", default_state = "collapsed" },
     { type = "list_box", source = "equipment_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
@@ -813,9 +813,9 @@ constants.pages = {
         { type = "plain", source = "size", formatter = "area" },
       },
     },
-    { type = "list_box", source = "compatible_resources" },
+    { type = "list_box", source = "can_mine" },
     { type = "list_box", source = "resource_categories", default_state = "collapsed" },
-    { type = "list_box", source = "compatible_fuels" },
+    { type = "list_box", source = "can_burn" },
     { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
@@ -860,7 +860,7 @@ constants.pages = {
     { type = "list_box", source = "products", always_show = true },
     { type = "list_box", source = "made_in" },
     { type = "list_box", source = "unlocked_by" },
-    { type = "list_box", source = "compatible_modules", default_state = "collapsed" },
+    { type = "list_box", source = "accepted_modules", default_state = "collapsed" },
   },
   resource_category = {
     { type = "list_box", source = "resources" },
@@ -878,7 +878,7 @@ constants.pages = {
       },
     },
     { type = "list_box", source = "products" },
-    { type = "list_box", source = "compatible_mining_drills" },
+    { type = "list_box", source = "mined_by" },
   },
   technology = {
     {
