@@ -39,11 +39,13 @@ rb-alt-click=Alt + click
 rb-attach-search-results-description=If enabled, clicking a search result will open an info page attached to the search GUI. Furthermore, clicking another search result will open it in that same page.\nYou can use the middle mouse button to open a detached info window at any time.
 rb-attach-search-results=Open search results in an attached info GUI
 rb-burned-in=Burned in
-rb-burnt-result=Burnt result
 rb-burnt-result-of=Burnt result of
+rb-burnt-result=Burnt result
+rb-can-burn=Can burn
+rb-can-craft=Can craft
 rb-captions=Captions
-rb-categories=Categories
 rb-categories-description=Uncheck a category to hide its objects from search and information pages.\n[font=default-semibold]NOTE:[/font] Some objects will be shown regardless of these settings (i.e. recipe ingredients and products).
+rb-categories=Categories
 rb-category=Category
 rb-charging-energy=Charging energy
 rb-click=Click
@@ -51,18 +53,14 @@ rb-close-quick-ref-window=Close quick reference window
 rb-close-search-gui-after-selection=Close search GUI after selection
 rb-collapse=Collapse
 rb-collapsed=Collapsed
-rb-compatible-equipment=Compatible equipment
-rb-compatible-fuels=Compatible fuels
-rb-compatible-mining-drills=Compatible mining drills
-rb-compatible-modules=Compatible modules
-rb-compatible-recipes=Compatible recipes
-rb-compatible-resources=Compatible resources
+rb-accepted-equipment=Accepted equipment
+rb-can-mine=Can mine
 rb-construction-radius=Construction radius
 rb-content=Content
 rb-control-click=Control + click
 rb-crafter=Crafter
-rb-crafting-time=Crafting time
 rb-crafting-time-desc=How long it takes to make this recipe in a crafter with a crafting speed of 1.
+rb-crafting-time=Crafting time
 rb-default-state=Default state
 rb-default-temperature=Default temperature
 rb-delete-favorites=Delete favorites
@@ -74,8 +72,8 @@ rb-energy-per-shield-point=Energy per shield point
 rb-energy-production=Energy production
 rb-equipment-categories=Equipment categories
 rb-equipment-category=Equipment category
-rb-equipment=Equipment
 rb-equipment-properties=Equipment properties
+rb-equipment=Equipment
 rb-expand=Expand
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
@@ -114,6 +112,7 @@ rb-machine=Machine
 rb-made-in=Made in
 rb-max-rows=Max rows
 rb-middle-click=Middle click
+rb-mined-by=Mined by
 rb-mined-from=Mined from
 rb-mining-area=Mining area
 rb-mining-drill=Mining drill
@@ -126,17 +125,17 @@ rb-no-content-warning=[img=warning-white] Nothing to show based on current setti
 rb-no-results=[img=warning-white] No results.
 rb-normal=Normal
 rb-offshore-pump=Offshore pump
+rb-open-in-technology-window=Open in technology window
 rb-open-info-relative-to-gui-description=When enabled, using the inspect hotkey on an object will show that object's info page relative to the currently open GUI. If no GUI is open, or the opened GUI does not support relative anchoring, it will open as a standalone window in the middle of the screen.
 rb-open-info-relative-to-gui=Open info page relative to current GUI
-rb-open-in-technology-window=Open in technology window
 rb-open-list-in-new-window=Open this list in a new window.
 rb-open-quick-ref-window=Open quick reference window
 rb-pages=Pages
 rb-per-second-suffix=/ s
 rb-pin-instruction=Keep open
 rb-place-as-equipment-result=Place as equipment result
-rb-placed-by=Placed by
 rb-place-result=Place result
+rb-placed-by=Placed by
 rb-prerequisite-of=Prerequisite of
 rb-prerequisites=Prerequisites
 rb-product-of=Product of
@@ -149,10 +148,10 @@ rb-recipes=Recipes
 rb-remove-from-favorites=Remove from favorites
 rb-required-fluid=Required fluid
 rb-required-units=Required units
-rb-researched-in=Researched in
 rb-research-ingredients-per-unit=Research ingredients per unit
-rb-researching-speed=Researching speed
 rb-research-speed-desc=The lab's base research speed. Does not include force bonuses.
+rb-researched-in=Researched in
+rb-researching-speed=Researching speed
 rb-resource-categories=Resource categories
 rb-resource-category=Resource category
 rb-resource=Resource
@@ -163,16 +162,16 @@ rb-rocket-launch-products=Rocket launch products
 rb-rocket-parts-required=Rocket parts required
 rb-search-gui-location-center=Center
 rb-search-gui-location-description=All GUIs in Recipe Book are draggable - this is just the default location. You can reset the location to default by middle-clicking the titlebar.
-rb-search-gui-location=Search GUI location
 rb-search-gui-location-top-left=Top-left
+rb-search-gui-location=Search GUI location
 rb-search-instruction=Search (__CONTROL__focus-search__)
-rb-search=Search
 rb-search-title=Recipe Book
 rb-search-type-both=Both
 rb-search-type-description=[font=default-semibold]Localised:[/font] An object's translated name will be matched for search.\n[font=default-semibold]Internal:[/font] An object's internal prototype name will be matched for search.\n[font=default-semibold]Both:[/font] An object's prototype name and translated name will both be matched for search.
 rb-search-type-internal=Internal
 rb-search-type-localised=Localised
 rb-search-type=Search type
+rb-search=Search
 rb-session-history=Session history
 rb-settings-instruction=Settings
 rb-settings=Recipe Book settings
@@ -201,6 +200,7 @@ rb-show-unresearched=Show unresearched objects
 rb-size=Size
 rb-stack-size=Stack size
 rb-take-result=Take result
+rb-accepted-modules=Accepted modules
 rb-tech-level-desc=The level of this infinite technology to show data for.
 rb-tech-level=Level
 rb-technology=Technology
